--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,4 +6,4 @@
     </p>
   
 
-<%= link_to "Sign Up Now", '#', :class => "signup_button round" =%>
+<%= link_to "Sign up now!", signup_path, :class => "signup_button round" %>
